--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ pause >nul</p>
      <p class="exp">Install the KMS application and run it. On the screen, a blue button will appear. Click on it and wait. Windows should be activated now!</p>
      <p style="color: red; font-size: 75%; font-weight: normal">Note: This method is not recommended because most KMS applications on the net have some form of malware attached to them that may harm your computer in many ways.</p>
    </ol><hr>
-   <p id="backword">While possible, it is important to remember that activating windows is not a free thing, and activating it for free violates Microsoft terms.</p><hr>
+   <p id="backword">While possible to activate Windows for free, doing so violates the Microsoft terms. The risks involved in activating Windows without purchasing a legitimate license include; virus attacks, system instability, lack of updates and support and potential legal consequences. This page is for educational purposes only.</p><hr>
    <details>
    <summary>See Also</summary>
    <ul>
