--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#mth4">Method 4: KMS application</a>
         <a href="#backword">Conclusion</a>
     </div>
-    <span style="color: #4caf50;">H</span>
+    <span style="color: #ADD8E6;">H</span>
 </div>
 <div class="drop">
     <button class="but">Help</button>
@@ -27,7 +27,7 @@
     <a href="https:yadgsvk.com">Contact us</a>
     <a href="https:yfxfgsj.com">FAQ</a>
 </div>
-</div><span style="color: #4caf50;">H</span>
+</div><span style="color: #ADD8E6;">H</span>
 <!--add g behind image tag when ready!-->
 <img src="https://i.imghippo.com/files/gyE6550Qxk.png" class="img">
 </div>
