--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
  <div><hr>
- <h2>Activating Windows 10 For Free</h2><hr>
+ <h1>Activating Windows 10 For Free</h1><hr>
    <img src="https://i.imghippo.com/files/tu9168LA.webp">
    <hr>
    <ul>
@@ -53,13 +53,12 @@
  Windows comes in many versions (e.g XP, Vista, 8, 10 etc), but we'll be focusing on Windows 10 on this page.</p>
  <p>It is not unknown  to most that Windows 10 (or any other version of windows) requires an activation to be fully utilized, and this activation is not all that cheap.</p>
  <p>If you're on this webpage, you are probably looking for a way to activate windows 10 for free. This will be discussed below. <span style="font-weight: bold;">A few things you'll need: </span></p>
-   <span style="font-weight: bold;"><li>A functioning computer running Windows 10 and is not activated.</li>
+   <li>A functioning computer running Windows 10 and is not activated.</li>
    <li>Access to admin user (you'll need to run some applications as administrator).</li>
    <li>A stable Internet connection.</li>
-   <li>If you are using the second method, you'll need to know what version of windows 10 you are on.</li></span></ul><hr>
+   <li>If you are using the second method, you'll need to know what version of windows 10 you are on.</li></ul><hr>
    <h2>Activating Windows</h2>
-   <details>
-    <summary>Table of Contents</summary>
+    <h3>Table of Contents</h3>
     <ul>
         <li><a href="#mth1">Method 1: Powershell</a></li><br>
         <li><a href="#mth2">Method 2: Command Prompt</a></li><br>
@@ -67,7 +66,6 @@
         <li><a href="#mth4">Method 4: KMS application</a></li><br>
         <li><a href="#backword">Conclusion</a></li>
     </ul>
-  </details>
    <p style="color: red; font-size: 77%">Disclaimer: This is for educational purposes only.</p><hr>
    <h3 id="mth1">Method 1(recommended):</h3>
    <ol>
